Alteração do menu

--- a/html/notas.html
+++ b/html/notas.html
@@ -1,37 +1,46 @@
 <!DOCTYPE html>
 <html lang="pt-bt">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<!-- Bootstrap CSS -->
-    	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <!-- Nosso CSS -->
-		<link rel="stylesheet" href="../css/style.css">
-		<title>Home Page</title>
-	</head>
-	<body class="notas">
-		<div id="container">
-			<header id="topo">
-				<h1 class="logo">Home page</h1>
-				<ul id="navegacao">
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+		integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<!-- Nosso CSS -->
+	<link rel="stylesheet" href="../css/style.css">
+	<title>Home Page</title>
+</head>
+
+<body class="notas">
+	<div id="container">
+		<header id="topo">
+			<h1 class="logo">Home page</h1>
+			<ul id="navegacao">
 
 				<li class="primeiro"><a href="index.html" id="home">Home</a></li>
 				<li><a href="notas.html" id="notas">Notas</a></li>
 				<li><a href="sobre.html" id="sobre">Sobre</a></li>
 				<li><a href="login.html" id="sair">Sair</a></li>
+				<li><a href="login.html" id="sair">Atualizar</a></li>
 
-				</ul>
-			</header ><!--fim do topo-->
-           <div id="conteudo"><!--começo do conteudo da pagina-->
-           	conteudo
+			</ul>
+		</header>
+		<!--fim do topo-->
+		<div id="conteudo">
+			<!--começo do conteudo da pagina-->
+			conteudo
 
-           </div><!--fim do conteudo-->
-				
-		</div><!--fim do container-->
-		<div id="conatiner-rodape" style="clear: both;">
-			<div id="rodape">
-				&copy; Copyright 2000-2021 Leonardo Barboza e Joziel Monteiro 
-			</div>
 		</div>
-	</body>
+		<!--fim do conteudo-->
+
+	</div>
+	<!--fim do container-->
+	<div id="conatiner-rodape" style="clear: both;">
+		<div id="rodape">
+			&copy; Copyright 2000-2021 Leonardo Barboza e Joziel Monteiro
+		</div>
+	</div>
+</body>
+
 </html>
