--- a/html/notas.html
+++ b/html/notas.html
@@ -38,7 +38,7 @@
 	<!--fim do container-->
 	<div id="conatiner-rodape" style="clear: both;">
 		<div id="rodape">
-			&copy; Copyright 2000-2021 Leonardo Barboza e Joziel Monteiro
+			&copy; Copyright 2000-2021 Leonardo e Ferreira
 		</div>
 	</div>
 </body>
